--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,7 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="cold">#2196F3</color>
+    <color name="warm">#FFC107</color>
+    <color name="hot">#FF5722</color>
 </resources>
